--- a/app.json
+++ b/app.json
@@ -26,11 +26,15 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.yourcompany.yourappname",
-       "versionCode": 1
- }
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c7f7906e-b60e-460f-a06c-e2cf42889c4d"
+      }
     }
   }
 }
